# PyRubik-AI-Solver

./: main.py  pyproject.toml  requirements.txt
benchmark/: benchmark.py
benchmark/evaluation/: evaluate_all.py
modelisation/: modelisation.py
src/: game_state.py
src/animation/: cube_interactive.py  projection.py
src/evaluation/: __init__.py
src/evaluation/basic/: __init__.py  combined.py  distance.py  entropy.py  evaluation_functions.py  membership.py
src/evaluation/look_up/: __init__.py  compute.py  evaluation_functions.py
src/evaluation/ml/: __init__.py  decision_tree_regressor.py  evaluation_functions.py  generic.py  gradient_booster_regressor.py  neural_network_regressor.py  random_forest.py  support_vector_regression.py  xgb_regressor.py
src/evaluation/solver/: kociemba_evaluation.py
src/genetic/: permutations_ga.py  simple_ga.py
src/modelisation/: data.py  formalism  modelisation.py  utils.py
src/neural_network/: super_tense.py
src/neural_network/ai_heuristic/: model.h5  super.py
src/search/: engines.py
src/search/dijkstra/: __init__.py  dijkstra.py  dijkstra_game_engine.py
src/search/evaluation/: distance.py  entropy.py  membership.py
src/search/generic/: container_based.py  generic.py
src/search/informed/: __init__.py  a_star.py  iterative_a_star.py  step_by_step_a_star.py
src/search/models/: game_state.py
src/search/stochastic/: __init__.py  best_improvement.py  first_improvement.py  iterative.py
src/search/uninformed/: __init__.py  breadth.py  depth.py  iterative_depth.py
test/CFOP/: cross.py
(+9 files in other folders)
